<resources>
    <string name="app_name">ProGlove Connect Sdk Sample</string>
    <string name="title_activity_main">Scanner Sample</string>
    <string name="EditorderLabel">Text</string>
    <string name="scanner_connected">Scanner connected</string>
    <string name="pair_scanner">Pair scanner</string>
    <string name="connect_scanner">Connect Scanner</string>
    <string name="last_scanned_text">Last scanned text</string>
    <string name="connect_service">connect service</string>
    <string name="service_connection_lbl">Service Connection:</string>
    <string name="service_connected">service connected</string>
    <string name="service_connecting">connecting…</string>
    <string name="pair_from_pinned_activity">Pair from pinned Activity</string>
    <string name="pair_scanner_regular">Pair scanner</string>
    <string name="title_activity_scanner_intent">Scanner Intent Activity</string>
    <string name="connection_state_label">Connection state</string>
    <string name="scanner_disconnected">Scanner disconnected</string>
    <string name="scanner_state_unknown">Scanner state unknown</string>
    <string name="lastcontact_label">Last Contact</string>
    <string name="symbology_label">Symbology</string>
    <string name="barcode_content">Barcode Content:</string>
    <string name="barcode_output_default">…</string>
    <string name="symbology_label_text">Symbology of last scan:</string>
    <string name="get_scanner_state">Get Scanner State</string>
    <string name="trigger_feedback_button">Trigger Feedback</string>
    <string name="feedback_id_1">Success</string>
    <string name="feedback_id_2">Error</string>
    <string name="feedback_id_3">Info</string>
    <string name="resolution_high">1280x800</string>
    <string name="resolution_medium">640x400</string>
    <string name="resolution_low">320x200</string>
    <string name="title_activity_display_intent">Display Intent Activity</string>
    <string name="title_activity_display">Display Sample</string>
    <string name="connect_D3">Connect Device 3</string>
    <string name="disconnect_D3">Disconnect Device 3</string>
    <string name="get_display_state">Get Display State</string>
    <string name="send_screen">Send test screen to Device 3</string>
    <string name="send_screen_failing">Send a erroneous test screen to Device 3</string>
    <string name="device_name_hint">Device name</string>
    <string name="display_state_unknown">Display state unknown</string>
    <string name="display_connected">Display connected</string>
    <string name="display_disconnected">Display disconnected</string>
    <string name="take_image_button">take image</string>
    <string name="feedback_text_hint">feedback text</string>
    <string name="image_quality_text">quality</string>
    <string name="timeout_text">timeout ms</string>
    <string name="image_will_appear_here">image will appear here</string>
    <string name="image_configurations">Image Configurations</string>
</resources>
